Remove active class from film titles and articles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h2 class="section-title">all films</h2>
           <ul class="list titles">
             <li><a href="#film-1" class="active"><span>Lobster</span></a></li>
-            <li><a href="#film-2"><span>The Square</span></a></li>
+            <li><a href="#film-2" class="active"><span>The Square</span></a></li>
             <li><a href="#film-3"><span>The Killing of a Sacred Deer</span></a></li>
             <li><a href="#film-4"><span>Sami Blood</span></a></li>
             <li><a href="#film-5"><span>On body and soul</span></a></li>
@@ -192,22 +192,42 @@
           <ul class="list authors">
             <li>
               <a href="#">
-                <span class="author-name">Kitty Toebean</span>
+                <span class="author-name">Jorgos Lantimos</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <span class="author-name">Theo Tabby</span>
+                <span class="author-name">Ruben Ostlund</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <span class="author-name">George Tuxedo</span>
+                <span class="author-name">Asia Argento</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <span class="author-name">Marion Berry</span>
+                <span class="author-name">Amanda Kernell</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="author-name">Xavier Dolan</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="author-name">Ildiko Enyedi</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="author-name">Joel Edgerton</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="author-name">Charles Biname</span>
               </a>
             </li>
           </ul>
