Finish titleClickHandler function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h2 class="section-title">all films</h2>
           <ul class="list titles">
             <li><a href="#film-1" class="active"><span>Lobster</span></a></li>
-            <li><a href="#film-2" class="active"><span>The Square</span></a></li>
+            <li><a href="#film-2"><span>The Square</span></a></li>
             <li><a href="#film-3"><span>The Killing of a Sacred Deer</span></a></li>
             <li><a href="#film-4"><span>Sami Blood</span></a></li>
             <li><a href="#film-5"><span>On body and soul</span></a></li>
