Add tags in html as data-tags

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </ul>
         </aside>
         <section class="films">
-          <article class="film active" id="film-1">
+          <article class="film active" id="film-1" data-tags="dystopia suicide murder">
             <h3 class="film-title">Lobster (2015)</h3>
             <p class="film-author">by Jorgos Lantimos</p>
             <div class="film-content">
@@ -32,7 +32,7 @@
               </ul>
             </div>
           </article>        
-          <article class="film" id="film-2">
+          <article class="film" id="film-2" data-tags="social-satire art-museum Sweden">
             <h3 class="film-title">The Square (2017)</h3>
             <p class="film-author">by Ruben Ostlund</p>
             <div class="film-content">
@@ -47,7 +47,7 @@
               </ul>
             </div>
           </article>        
-          <article class="film" id="film-3">
+          <article class="film" id="film-3" data-tags="murder sociopath revenge">
             <h3 class="film-title">The Killing of a Sacred Deer (2017)</h3>
             <p class="film-author">by Jorgos Lantimos</p>
             <div class="film-content">
@@ -62,7 +62,7 @@
               </ul>
             </div>
           </article>        
-          <article class="film" id="film-4">
+          <article class="film" id="film-4" data-tags="Sweden coming-of-age deer female-director">
             <h3 class="film-title">Sami Blood (2016)</h3>
             <p class="film-author">by Amanda Kernell</p>
             <div class="film-content">
@@ -78,7 +78,7 @@
               </ul>
             </div>
           </article>
-          <article class="film" id="film-5">
+          <article class="film" id="film-5" data-tags="dreams deer suicide female-director">
             <h3 class="film-title">On body and soul (2017)</h3>
             <p class="film-author">by Ildiko Enyedi</p>
             <div class="film-content">
@@ -94,7 +94,7 @@
               </ul>
             </div>
           </article>        
-          <article class="film" id="film-6">
+          <article class="film" id="film-6" data-tags="LGBT royalty secret-love">
             <h3 class="film-title">Favourite (2018)</h3>
             <p class="film-author">by Jorgos Lantimos</p>
             <div class="film-content">
@@ -109,7 +109,7 @@
               </ul>
             </div>
           </article>
-          <article class="film" id="film-7">
+          <article class="film" id="film-7" data-tags="lonely-child coming-of-age female-director">
             <h3 class="film-title">Incompresa (2014)</h3>
             <p class="film-author">by Asia Argento</p>
             <div class="film-content">
@@ -124,7 +124,7 @@
               </ul>
             </div>
           </article>
-          <article class="film" id="film-8">
+          <article class="film" id="film-8" data-tags="Xavier-Dolan psychiatric-hospital">
             <h3 class="film-title">Elephant Song (2014)</h3>
             <p class="film-author">by Charles Biname</p>
             <div class="film-content">
@@ -138,7 +138,7 @@
               </ul>
             </div>
           </article>
-          <article class="film" id="film-9">
+          <article class="film" id="film-9" data-tags="LGBT secret-love Xavier-Dolan">
             <h3 class="film-title">Matthieu & Maxime (2019)</h3>
             <p class="film-author">by Xavier Dolan</p>
             <div class="film-content">
@@ -153,7 +153,7 @@
               </ul>
             </div>
           </article>
-          <article class="film" id="film-10">
+          <article class="film" id="film-10" data-tags="LGBT coming-of-age Xavier-Dolan">
             <h3 class="film-title">Boy Erased (2018)</h3>
             <p class="film-author">by Joel Edgerton</p>
             <div class="film-content">
