JS Find films and their tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hashfilms</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300|Oxygen:300|Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="blog">
     <div class="container">
-      <h1 class="logo">hashfilms</h1>
+      <h1 class="logo">HashFilms</h1>
       <main class="wrapper">
         <aside class="sidebar">
           <h2 class="section-title">all films</h2>
