JS generating authors function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="films">
           <article class="film active" id="film-1" data-tags="dystopia suicide murder">
             <h3 class="film-title">Lobster (2015)</h3>
-            <p class="film-author">by Jorgos Lantimos</p>
+            <p class="film-author" data-author="Jorgos Lantimos"></p>
             <div class="film-content">
               <p>In a dystopian near future, single people, according to the laws of The City, are taken to The Hotel, where they are obliged to find a romantic partner in forty-five days or are transformed into beasts and sent off into The Woods.</p>
             </div>
@@ -32,7 +32,7 @@
           </article>
           <article class="film" id="film-2" data-tags="social-satire art-museum Sweden">
             <h3 class="film-title">The Square (2017)</h3>
-            <p class="film-author">by Ruben Ostlund</p>
+            <p class="film-author" data-author="Ruben Ostlund"></p>
             <div class="film-content">
               <p>A prestigious Stockholm museum's chief art curator finds himself in times of both professional and personal crisis as he attempts to set up a controversial new exhibit.</p>
               </div>
@@ -44,7 +44,7 @@
           </article>        
           <article class="film" id="film-3" data-tags="murder sociopath revenge">
             <h3 class="film-title">The Killing of a Sacred Deer (2017)</h3>
-            <p class="film-author">by Jorgos Lantimos</p>
+            <p class="film-author" data-author="Jorgos Lantimos"></p>
             <div class="film-content">
               <p>Steven, a charismatic surgeon, is forced to make an unthinkable sacrifice after his life starts to fall apart, when the behavior of a teenage boy he has taken under his wing turns sinister.</p>  
             </div>
@@ -56,7 +56,7 @@
           </article>        
           <article class="film" id="film-4" data-tags="Sweden coming-of-age deer female-director">
             <h3 class="film-title">Sami Blood (2016)</h3>
-            <p class="film-author">by Amanda Kernell</p>
+            <p class="film-author" data-author="Amanda Kernell"></p>
             <div class="film-content">
               <p>A reindeer-breeding Sámi girl who is exposed to the racism of the 1930's at her boarding school, starts dreaming of another life. But to achieve it, she has to become someone else and break all ties with her family and culture.</p>
             </div>
@@ -68,7 +68,7 @@
           </article>
           <article class="film" id="film-5" data-tags="dreams deer suicide female-director">
             <h3 class="film-title">On body and soul (2017)</h3>
-            <p class="film-author">by Ildiko Enyedi</p>
+            <p class="film-author" data-author="Ildiko Enyedi"></p>
             <div class="film-content">
               <p>When slaughterhouse workers Endre and Mária discover they share the same dreams - where they meet in a forest as deer and fall in love - they decide to make their dreams come true but it's difficult in real life.</p>
             </div>
@@ -80,7 +80,7 @@
           </article>        
           <article class="film" id="film-6" data-tags="LGBT royalty secret-love">
             <h3 class="film-title">Favourite (2018)</h3>
-            <p class="film-author">by Jorgos Lantimos</p>
+            <p class="film-author" data-author="Jorgos Lantimos"></p>
             <div class="film-content">
               <p>In early 18th century England, a frail Queen Anne occupies the throne and her close friend, Lady Sarah, governs the country in her stead. When a new servant, Abigail, arrives, her charm endears her to Sarah.</p>
             </div>
@@ -92,7 +92,7 @@
           </article>
           <article class="film" id="film-7" data-tags="lonely-child coming-of-age female-director">
             <h3 class="film-title">Incompresa (2014)</h3>
-            <p class="film-author">by Asia Argento</p>
+            <p class="film-author" data-author="Asia Argento"></p>
             <div class="film-content">
               <p>Rome, 1984, Aria is nine-year-old girl. On the verge of divorce, Aria's infantile and selfish parents are too preoccupied with their careers and extra-marital affairs to properly tend to any of Aria's needs.</p>
             </div>
@@ -104,7 +104,7 @@
           </article>
           <article class="film" id="film-8" data-tags="Xavier-Dolan psychiatric-hospital">
             <h3 class="film-title">Elephant Song (2014)</h3>
-            <p class="film-author">by Charles Biname</p>
+            <p class="film-author" data-author="Charles Biname"></p>
             <div class="film-content">
               <p>A psychiatrist is drawn into a complex mind game when he questions a disturbed patient about the disappearance of a colleague.</p>
             </div>
@@ -116,7 +116,7 @@
           </article>
           <article class="film" id="film-9" data-tags="LGBT secret-love Xavier-Dolan">
             <h3 class="film-title">Matthieu & Maxime (2019)</h3>
-            <p class="film-author">by Xavier Dolan</p>
+            <p class="film-author" data-author="Xavier Dolan"></p>
             <div class="film-content">
               <p>A drama focusing on a group of friends in their late 20s.</p>
             </div>
@@ -128,7 +128,7 @@
           </article>
           <article class="film" id="film-10" data-tags="LGBT coming-of-age Xavier-Dolan">
             <h3 class="film-title">Boy Erased (2018)</h3>
-            <p class="film-author">by Joel Edgerton</p>
+            <p class="film-author" data-author="Joel Edgerton"></p>
             <div class="film-content">
               <p>The son of a Baptist preacher is forced to participate in a church-supported gay conversion program after being forcibly outed to his parents.</p>
             </div>
