JS tagsParams function add

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </ul>
             </div>
           </article>
-          <article class="film" id="film-2" data-tags="social-satire art-museum Sweden" data-author="Ruben Ostlund">
+          <article class="film" id="film-2" data-tags="art-museum Sweden" data-author="Ruben Ostlund">
             <h3 class="film-title">The Square (2017)</h3>
             <p class="film-author"></p>
             <div class="film-content">
@@ -42,7 +42,7 @@
               </ul>
             </div>
           </article>        
-          <article class="film" id="film-3" data-tags="murder sociopath revenge" data-author="Jorgos Lantimos">
+          <article class="film" id="film-3" data-tags="murder sociopath" data-author="Jorgos Lantimos">
             <h3 class="film-title">The Killing of a Sacred Deer (2017)</h3>
             <p class="film-author"></p>
             <div class="film-content">
@@ -54,7 +54,7 @@
               </ul>
             </div>
           </article>        
-          <article class="film" id="film-4" data-tags="Sweden coming-of-age deer female-director" data-author="Amanda Kernell">
+          <article class="film" id="film-4" data-tags="Sweden coming-of-age lonely-child deer female-director" data-author="Amanda Kernell">
             <h3 class="film-title">Sami Blood (2016)</h3>
             <p class="film-author"></p>
             <div class="film-content">
@@ -66,7 +66,7 @@
               </ul>
             </div>
           </article>
-          <article class="film" id="film-5" data-tags="dreams deer suicide female-director" data-author="Ildiko Enyedi">
+          <article class="film" id="film-5" data-tags="deer suicide female-director" data-author="Ildiko Enyedi">
             <h3 class="film-title">On body and soul (2017)</h3>
             <p class="film-author"></p>
             <div class="film-content">
@@ -78,7 +78,7 @@
               </ul>
             </div>
           </article>        
-          <article class="film" id="film-6" data-tags="LGBT royalty secret-love" data-author="Jorgos Lantimos">
+          <article class="film" id="film-6" data-tags="LGBT secret-love" data-author="Jorgos Lantimos">
             <h3 class="film-title">Favourite (2018)</h3>
             <p class="film-author"></p>
             <div class="film-content">
