JS add author's name under the film title HTML add one film and tags

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </ul>
             </div>
           </article>
-          <article class="film" id="film-2" data-tags="art-museum Sweden" data-author="Ruben Ostlund">
+          <article class="film" id="film-2" data-tags="art-museum Sweden single-parent" data-author="Ruben Ostlund">
             <h3 class="film-title">The Square (2017)</h3>
             <p class="film-author"></p>
             <div class="film-content">
@@ -131,6 +131,18 @@
             <p class="film-author"></p>
             <div class="film-content">
               <p>The son of a Baptist preacher is forced to participate in a church-supported gay conversion program after being forcibly outed to his parents.</p>
+            </div>
+            <div class="film-tags">
+              <p><strong>tags:</strong></p>
+              <ul class="list list-horizontal">
+              </ul>
+            </div>
+          </article>
+          <article class="film" id="film-11" data-tags="LGBT coming-of-age Xavier-Dolan lonely-child single-parent" data-author="Xavier Dolan">
+            <h3 class="film-title">J'ai tué ma mère (2009)</h3>
+            <p class="film-author"></p>
+            <div class="film-content">
+              <p>A semi-autobiographical story about Hubert as a young homosexual at odds with his mother.</p>
             </div>
             <div class="film-tags">
               <p><strong>tags:</strong></p>
