--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
 </script>
 
 <script id="template-tagCloud-link" type="text/x-handlebars-template">
-  
+  {{#each tags}}
+    <li><a class="{{ className }}" href="#tag-{{tag}}">{{ tag }} ({{ count }})</a></li>
+  {{/each}}
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
